syntax = "proto3";

import "Protos/Common/common.proto";
import "Protos/PostFeedback/post.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "PostFeedback.API";

package feedback;

//service for leaving feedback on user
service FeedbackForUser {
  rpc LeaveFeedback (CreateFeedbackRequest) returns (common.Response);
  rpc DeleteFeedback (common.Request) returns (common.Response);
  rpc GetFeedbackDetails (common.Request) returns (FeedbackResponse); 
  rpc GetFeedbacksForItem (common.Request) returns (FeedbackListResponse); 
}
//service for leaving feedback on accommodation indicated in post
service FeedbackForPost {
  rpc LeaveFeedback (CreateFeedbackRequest) returns (common.Response);
  rpc DeleteFeedback (common.Request) returns (common.Response);
  rpc GetFeedbackDetails (common.Request) returns (FeedbackResponse); 
  rpc GetFeedbacksForItem (common.Request) returns (FeedbackListResponse); 
}

message CreateFeedbackRequest {
  google.protobuf.Int64Value creatorId = 1;
  google.protobuf.Int64Value itemId = 2;
  google.protobuf.Int32Value rating = 3;
  google.protobuf.StringValue message = 4;
}
message FeedbackResponse {
	int64 id = 1;
	post.User feedbackCreator = 2;
	post.User user = 3;
	post.PostResponse accommodation = 4;
	int32 rating = 5;
	google.protobuf.StringValue message = 6;
	bool noItem = 7;
}
message FeedbackListResponse {
	repeated FeedbackResponse items = 1;
}