syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Protos.Common";

package common;

message Empty {

}
message Error {
string propertyName = 1;
string message = 2;
}
message Response {
bool IsSuccess = 1;
repeated Error errors = 2;
string message = 3;
}
message Request {
  int64 id = 1;
}
message Item {
int64 id = 1;
string name = 2;
}
message User {
int64 id = 1;
google.protobuf.StringValue firstName = 2;
google.protobuf.StringValue lastName = 3;
string email = 9;
google.protobuf.StringValue phoneNumber = 10;
}

message PostInfoResponse {
   int64 id = 1;
   string title = 2;
   google.protobuf.StringValue description = 3;
   User owner = 4;
   Category category = 5;
   string address = 6;
   google.protobuf.StringValue referencePoint = 7;
   string contactNumber = 8;
   google.protobuf.Int32Value roomsNo = 9;
   google.protobuf.Int32Value bathroomsNo = 10;
   google.protobuf.Int32Value bedsNo = 11;
   int32 maxGuestsNo = 12;
   google.protobuf.Int32Value squareMeters = 13;
   double price = 14;
   google.protobuf.DoubleValue latitude = 15;
   google.protobuf.DoubleValue longitude = 16;
   google.protobuf.BoolValue isWholeApartment = 17;
   google.protobuf.StringValue additionalInfo = 18;
   google.protobuf.Timestamp datePublishedTimeStamp = 19;
   string movingInTime = 20;
   string movingOutTime = 21;
   repeated AccommodationPhoto accommodationPhotos = 22;
   repeated AccommodationItem accommodationSpecificities = 23;
   repeated AccommodationItem accommodationRules = 24;
   repeated AccommodationItem accommodationFacilities = 25;
   bool NoItem = 26;
}
message AccommodationItem {
int64 id = 1;
google.protobuf.StringValue otherValue = 3;
common.Item base = 4;
}

message Category {
int64 id = 1;
string name = 2;
}

message AccommodationPhoto {
int64 id = 1;
google.protobuf.BytesValue photo = 3;
google.protobuf.StringValue mimeType = 4;
}
